[package]
name = "geo-generator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "geo-generator"
path = "src/main.rs"

[dependencies]
solana-client = "2.2"
solana-sdk = "2.2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
