[package]
name = "solana-leader-routing"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
zela-std.workspace = true
serde.workspace = true
log.workspace = true
serde_json = "1.0"
solana-sdk = "2.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
solana-client = "2.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
